--- a/index.html
+++ b/index.html
@@ -414,35 +414,35 @@
         // Your roster data
         const rosterData = `May,DAY ,James ,Candice,Kurt,Ed,Jeff,Jan,Charmaine,Kirrilly ,Grace
 1st,Sunday,,,,,,,,,
-2nd,Monday,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-3rd,Tuesday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-4th,Wednesday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-5th,Thursday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-6th,Friday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+2nd,Monday,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+3rd,Tuesday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+4th,Wednesday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+5th,Thursday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+6th,Friday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
 7th,Saturday,,9 to 5pm,,,9 to 5pm,,9am to 2pm,,
 8th,Sunday,,,,,,,,,
-9th,Monday,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-10th,Tuesday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-11th,Wednesday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-12th,Thursday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-13th,Friday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+9th,Monday,9 to 5pm,8:30 to 6pm,,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+10th,Tuesday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+11th,Wednesday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+12th,Thursday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+13th,Friday ,,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
 14th,Saturday,,9 to 5pm,,,9 to 5pm,,9am to 2pm,,
 15th,Sunday,,,,,,,,,
-16th,Monday,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-17th,Tuesday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-18th,Wednesday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-19th,Thursday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-20th,Friday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+16th,Monday,,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+17th,Tuesday ,9 to 5pm,8:30 to 6pm,,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+18th,Wednesday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+19th,Thursday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+20th,Friday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
 21st,Saturday,,9 to 5pm,,,9 to 5pm,,9am to 2pm,,
 22nd,Sunday,,,,,,,,,
-23rd,Monday,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-24th,Tuesday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-25th,Wednesday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-26th,Thursday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
-27th,Friday ,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,WFH,9am to 6pm ,9 to 5pm,9 to 5pm
+23rd,Monday,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+24th,Tuesday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+25th,Wednesday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+26th,Thursday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,9 to 5pm
+27th,Friday ,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,WFH,9am to 6pm ,9 to 5pm,9 to 5pm
 28th,Saturday,,9 to 5pm,,,9 to 5pm,,9am to 2pm,,
 29th,Sunday,,,,,,,,,
-30th,Monday,9 to 5pm,8:30 to 6pm,9 to 5pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,10am to 2pm`;
+30th,Monday,9 to 5pm,8:30 to 6pm,9 to 2pm,9 to 5pm,9 to 5pm,10am to 5pm ,9am to 6pm ,9 to 5pm,10am to 2pm`;
 
         function parseRosterData(csvText) {
             const lines = csvText.trim().split('\n');
@@ -474,13 +474,15 @@
         }
 
         function getShiftType(shift) {
-            if (!shift || shift === '') return 'off';
+            // Handle null, undefined, empty string, or whitespace-only strings as 'off'
+            if (!shift || shift === '' || shift.trim() === '') return 'off';
             if (shift.toLowerCase().includes('wfh')) return 'wfh';
             return 'working';
         }
 
         function formatShift(shift) {
-            if (!shift || shift === '') return 'Off';
+            // Handle null, undefined, empty string, or whitespace-only strings as 'Off'
+            if (!shift || shift === '' || shift.trim() === '') return 'Off';
             if (shift.toLowerCase().includes('wfh')) return 'WFH';
             return shift;
         }
@@ -499,7 +501,8 @@
             roster.forEach(day => {
                 const dailyStaff = employees.filter(emp => {
                     const shift = day.shifts[emp];
-                    return shift && shift !== '' && !shift.toLowerCase().includes('wfh');
+                    // Count as working if shift exists, is not empty/whitespace, and is not WFH
+                    return shift && shift.trim() !== '' && !shift.toLowerCase().includes('wfh');
                 }).length;
                 
                 if (isWeekend(day.day)) {
